--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+   <!--  // <script src="../lib/d3" charset="utf-8"></script> -->
     <script src="core.js"></script>
 </head>
 
@@ -30,7 +31,7 @@
         </form>
       </div>
     </div>
-    <hello-world></hello-world>
+    <bar-graph data="data"></bar-graph>
   </div>
 </body>
 
